# autocsr

./: .flake8  .travis.yml  LICENSE  README.md  pyproject.toml  requirements3.txt
autocsr/: __init__.py  cli.py  csr.py  extensions.py  hsm.py  oid.py  unsupported_extensions.py  utils.py
autocsr/protos/: csr.proto  csr_pb2.py  csr_pb2.pyi
docs/: autocsr.rst  conf.py  extensions.rst  hsms.rst  index.rst  license.rst  modules.rst  requirements.txt
examples/: attribute_example.yaml  extension_example.yaml  key_example.yaml  quick_csr.jinja2  quick_csr.yaml  softhsm_example.yaml  subject_example.yaml
tests/: __init__.py  test_autocsr.py  test_cli.py  test_csr.py  test_extensions.py  test_hsm.py  test_oid.py  test_utils.py
tests/fixtures/: test.key  test_config.jinja2  test_config.yaml
tests/functional/: Dockerfile  create_key.py  functional_test.py
