[tool.poetry]
name = "autocsr"
version = "0.1.0"
description = ""
authors = ["Max Wolfe <max@securitywolfe.com>"]

[tool.poetry.dependencies]
python = "^3.9"
cryptography = "^3.4.7"
protobuf = "^3.15.8"
PyYAML = "^5.4.1"
typer = "^0.3.2"
Jinja2 = "^2.11.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
yamllint = "^1.26.1"
black = "^20.8b1"
isort = "^5.8.0"
python-language-server = {extras = ["all"], version = "^0.36.2"}

[tool.poetry.scripts]
autocsr = "autocsr.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
